<resources>
    <string name="app_name">Client</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="skm_coffee">SKM Coffee</string>
    <string name="dang_nhap">Đăng nhập</string>
    <string name="luu_thong_tin">Lưu thông tin</string>
    <string name="mat_khau">Mật Khẩu</string>
    <string name="nhan_vien">Nhân viên</string>
    <string name="table">Table</string>
    <string name="ttnv">Thông tin nhân viên</string>
    <string name="logout">Đăng xuất</string>
    <string name="notification_bill">Vui lòng xác nhận lại đơn hàng với khách trước khi bấm xác nhận</string>
    <string name="xndh">XÁC NHẬN LẠI ĐƠN HÀNG</string>
    <string name="home">Trang chủ</string>
    <string name="thu_vat_10_bao_g_m">Thuế VAT 10 % (Đã bao gồm)</string>
    <string name="san_pham">Sản phẩm</string>
    <string name="tong_tien">Tổng tiền</string>
    <string name="EmployeeString">Nhân viên:</string>
    <string name="ExampleName">Nguyễn Văn A</string>
    <string name="ExampleTime">14:00</string>
    <string name="Time">Thời gian:</string>
    <string name="ExampleNumber">0</string>
    <string name="Table">Bàn số</string>
    <string name="Date">Ngày:</string>
    <string name="ExampleDay">06/09/22</string>
    <string name="ExampleProduct">Cà phê sữa đá</string>
    <string name="ExamplePrice">15.000x1</string>
    <string name="Order">Order</string>
    <string name="Pay">Thanh toán</string>
    <string name="Discount">Mã khuyến mãi</string>
    <string name="Apply">Áp dụng</string>
    <string name="TotalBill">Tổng số tiền</string>
    <string name="ExampleMoney">99.000</string>
    <string name="menu">Menu</string>
    <string name="order">Order</string>
    <string name="vnd">VNĐ</string>
    <string name="example_money">đ 5,600</string>
    <string name="TotalMoney">Tổng tiền</string>
    <string name="FullName">Họ và tên</string>
    <string name="mk">Mật khẩu</string>
    <string name="NumberPhone">Số điện thoại</string>
    <string name="Address">Địa chỉ</string>
    <string name="ava_string">Ảnh đại diện</string>
    <string name="save">Save</string>
</resources>