<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.pay.PayFragment">
    <TextView
        android:id="@+id/tvEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/EmployeeString"
        android:textSize="@dimen/sp_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmployeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/ExampleName"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvEmployee"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/Table"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmployee" />

    <TextView
        android:id="@+id/tvTableNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/ExampleNumber"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvTable"
        app:layout_constraintTop_toBottomOf="@id/tvEmployee" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/Time"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toEndOf="@id/tvTableNumber"
        app:layout_constraintTop_toBottomOf="@id/tvEmployee" />

    <TextView
        android:id="@+id/tvTimeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/ExampleTime"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvTime"
        app:layout_constraintTop_toBottomOf="@id/tvEmployee" />

    <TextView
        android:id="@+id/tvDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/Date"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toEndOf="@id/tvTimeStart"
        app:layout_constraintTop_toBottomOf="@id/tvEmployee" />

    <TextView
        android:id="@+id/tvDayBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/ExampleDay"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvDay"
        app:layout_constraintTop_toBottomOf="@id/tvEmployee" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductOrder"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_margin="@dimen/dp_10"
        app:layout_constraintBottom_toTopOf="@id/edtCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTable"
        tools:listitem="@layout/item_menu_pay" />
    <EditText
        android:id="@+id/edtCode"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:background="@drawable/custom_border_gray"
        android:hint="@string/Discount"
        app:layout_constraintEnd_toStartOf="@id/btnApply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvProductOrder"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnApply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:backgroundTint="@color/orangeApp"
        android:text="@string/Apply"
        app:cornerRadius="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/edtCode"
        app:layout_constraintTop_toBottomOf="@id/rvProductOrder" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:text="@string/TotalBill"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnApply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnPay"
        />

    <TextView
        android:id="@+id/tvTotalMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_20"
        android:text="@string/ExampleMoney"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnApply"
        />
    <Button
        android:id="@+id/btnPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginEnd="@dimen/dp_10"
        android:backgroundTint="@color/orangeApp"
        android:text="@string/Pay"
        app:cornerRadius="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotal" />
</androidx.constraintlayout.widget.ConstraintLayout>