<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="@dimen/dp_15"
    tools:context=".ui.main.order.OrderFragment">

    <TextView
        android:id="@+id/tvEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_10"
        android:text="@string/EmployeeString"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmployeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:text="@string/ExampleName"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvEmployee"
        app:layout_constraintStart_toEndOf="@id/tvEmployee"
        app:layout_constraintTop_toTopOf="@id/tvEmployee" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/Time"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="@id/tvEmployee"
        app:layout_constraintTop_toBottomOf="@id/tvEmployee" />

    <TextView
        android:id="@+id/tvTimeStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_5"
        android:text="@string/ExampleTime"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/tvTime"
        app:layout_constraintTop_toTopOf="@id/tvTime" />

    <TextView
        android:id="@+id/tvDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Date"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        app:layout_constraintStart_toStartOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/tvTimeStart"
        app:layout_constraintTop_toTopOf="@id/tvTimeStart" />

    <TextView
        android:id="@+id/tvDayBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_5"
        android:text="@string/ExampleDay"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_18"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tvTime"
        app:layout_constraintStart_toEndOf="@id/tvDay"
        app:layout_constraintTop_toTopOf="@id/tvDay" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrder"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_marginVertical="@dimen/dp_10"
        app:layout_constraintBottom_toTopOf="@+id/btnOrder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime" />

    <Button
        android:id="@+id/btnOrder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:backgroundTint="@color/orangeApp"
        android:text="@string/Order"
        app:cornerRadius="@dimen/dp_10"
        android:paddingVertical="@dimen/dp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:backgroundTint="@color/orangeApp"
        android:text="@string/Pay"
        android:paddingVertical="@dimen/dp_12"
        app:cornerRadius="@dimen/dp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>