<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.bill.BillFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/notification_bill"
        android:padding="@dimen/dp_15"
        android:background="#1AFC7300"
        android:textSize="@dimen/sp_12"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/dp_15"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="false"
        android:layout_marginBottom="-10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:strokeColor="#C2C2D3"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:paddingTop="@dimen/dp_10">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_20"
                android:layout_marginBottom="@dimen/dp_15"
                android:text="@string/xndh"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#4DE3E4E6"
                app:layout_constraintBottom_toTopOf="@id/textView3"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_15"
                android:text="@string/san_pham"
                android:textColor="#71778E"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/rvBill"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/view" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tong_tien"
                android:textColor="#71778E"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBill"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@id/textView8"
                app:layout_constraintEnd_toEndOf="@id/textView2"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                tools:listitem="@layout/item_bill">

            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thu_vat_10_bao_g_m"
                android:textStyle="bold"
                android:textColor="#71778E"
                android:textSize="@dimen/sp_15"
                android:layout_marginTop="@dimen/dp_15"
                app:layout_constraintTop_toBottomOf="@+id/rvBill"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintBottom_toTopOf="@+id/textView10"
                />

            <TextView
                android:id="@+id/tvVat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_money"
                android:textStyle="bold"
                android:textColor="#ED174A"
                android:textSize="@dimen/sp_15"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="@id/textView2"
                />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TotalMoney"
                android:textStyle="bold"
                android:textColor="#71778E"
                android:textSize="@dimen/sp_15"
                android:layout_marginVertical="@dimen/dp_15"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintBottom_toTopOf="@+id/view2"
                />

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/example_money"
                android:textStyle="bold"
                android:textColor="#000000"
                android:textSize="@dimen/sp_15"
                app:layout_constraintTop_toTopOf="@+id/textView10"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintEnd_toEndOf="@id/textView2" />


            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="#4DE3E4E6"
                android:layout_marginBottom="@dimen/dp_15"
                app:layout_constraintBottom_toTopOf="@id/btnGoHome"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <Button
                android:id="@+id/btnGoHome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_30"
                android:backgroundTint="@color/bg_action_bar"
                android:paddingVertical="@dimen/dp_15"
                android:text="@string/home"
                app:cornerRadius="@dimen/dp_8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/textView2"
                app:layout_constraintStart_toStartOf="@id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>