<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.employee.info.EmployeeInfoFragment">

    <ImageView
        android:id="@+id/imgAva"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/ic_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvAva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ava_string"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgAva" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_marginTop="@dimen/dp_15"
        android:hint="@string/FullName"
        android:theme="@style/Theme.ChangeCursor"
        app:boxStrokeColor="@color/orangeApp"
        app:hintTextColor="@color/orangeApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAva">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:hint="@string/mk"
        android:theme="@style/Theme.ChangeCursor"
        app:boxStrokeColor="@color/orangeApp"
        app:hintTextColor="@color/orangeApp"
        app:layout_constraintEnd_toEndOf="@+id/edtName"
        app:layout_constraintStart_toStartOf="@+id/edtName"
        app:layout_constraintTop_toBottomOf="@+id/edtName"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/orangeApp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtNumberPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:hint="@string/NumberPhone"
        android:theme="@style/Theme.ChangeCursor"
        app:boxStrokeColor="@color/orangeApp"
        app:hintTextColor="@color/orangeApp"
        app:layout_constraintEnd_toEndOf="@+id/edtPass"
        app:layout_constraintStart_toStartOf="@+id/edtPass"
        app:layout_constraintTop_toBottomOf="@+id/edtPass">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionNext"
            android:inputType="textPhonetic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtAddress"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:hint="@string/Address"
        android:theme="@style/Theme.ChangeCursor"
        app:boxStrokeColor="@color/orangeApp"
        app:hintTextColor="@color/orangeApp"
        app:layout_constraintEnd_toEndOf="@+id/edtNumberPhone"
        app:layout_constraintStart_toStartOf="@+id/edtNumberPhone"
        app:layout_constraintTop_toBottomOf="@+id/edtNumberPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:imeOptions="actionDone"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>