<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="mv"
            type="com.mksk.client.ui.main.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.login.LoginFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/dp_181"
            android:layout_height="@dimen/dp_181"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@+id/txtUser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtUser"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:layout_marginVertical="@dimen/dp_10"
            android:theme="@style/Theme.ChangeCursor"
            app:boxStrokeColor="@color/bg_action_bar"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nhan_vien"
                android:inputType="none"
                android:textColor="@color/black" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_20"
            android:theme="@style/Theme.ChangeCursor"
            app:boxStrokeColor="@color/bg_action_bar"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/chbRemember"
            app:layout_constraintEnd_toEndOf="@+id/txtUser"
            app:layout_constraintStart_toStartOf="@+id/txtUser"
            app:layout_constraintTop_toBottomOf="@+id/txtUser"
            app:passwordToggleEnabled="true">


            <androidx.appcompat.widget.AppCompatEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mat_khau"
                android:text="@={mv.inputPassword}" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/chbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#FC7300"
            android:checked="true"
            android:shadowColor="@color/black"
            android:text="@string/luu_thong_tin"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintStart_toStartOf="@+id/txtPassword"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/bg_action_bar"
            android:elevation="@dimen/dp_15"
            android:onClick="@{()->mv.handleLogin()}"
            android:paddingVertical="@dimen/dp_15"
            android:text="@string/dang_nhap"
            android:textStyle="bold"
            app:cornerRadius="@dimen/dp_8"
            app:iconTint="@color/bg_action_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtPassword"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/txtPassword"
            app:layout_constraintTop_toBottomOf="@+id/chbRemember" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>